fix channels scroll, truncate long channel names

--- a/assets/css/gridLayout.css
+++ b/assets/css/gridLayout.css
@@ -8,10 +8,8 @@
 
 .channels {
   grid-column: 1;
-  overflow: auto;
 }
 
 .messages {
   grid-column: 2;
-  overflow: auto;
 }
